# IW

./: CMakeLists.txt  CMakePresets.json  OpenIW.tagfile.xml  README.md  ReSharper.DotSettings  _i_w3_8cpp.html  _i_w4_8cpp.html  _i_w5_8cpp.html  _open_i_w_8cpp.html  _t5_8cpp.html  _t6_8cpp.html  aabbtree_8cpp.html  aabbtree_8h.html  aabbtree_8hpp.html  action__slots_8h.html  action__slots_8hpp.html  actor__defines_8h.html  actor__defines_8hpp.html  aim__assist_8cpp.html  aim__assist_8h.html  aim__assist_8hpp.html  aim__input_8h.html  aim__input_8hpp.html  aim__target_8h.html  aim__target_8hpp.html  aim__target__mp_8cpp.html  allocator_8h.html  allocator_8hpp.html  annotated.html  array_8cpp.html  array_8h.html  assertive_8cpp.html  assertive_8h.html  assertive_8hpp.html  assetbuf_8cpp.html  assetbuf_8h.html  assetbuf_8hpp.html  atgaudio_8cpp.html  atgaudio_8h.html  atgaudio_8hpp.html  (+2255 more)
src/: CMakeLists.txt
src/OpenIW/: CMakeLists.txt  bison.simple  snd.cpp  stdafx.cpp  stdafx.hpp
src/OpenIW/aim_assist/: aim_assist.cpp  aim_target_mp.cpp
src/OpenIW/bgame/: bg_animation_mp.cpp  bg_jump.cpp  bg_mantle.cpp  bg_misc.cpp  bg_perks_mp.cpp  bg_perks_mp.hpp  bg_pmove.cpp  bg_public.hpp  bg_slidemove.cpp  bg_weapons.cpp  bg_weapons.hpp  bg_weapons_ammo.cpp  bg_weapons_load_db.hpp  bg_weapons_load_obj.cpp  bg_weapons_setup.cpp  bg_weapons_util.cpp  bg_weapons_util.hpp  bg_weapons_view.cpp
src/OpenIW/cgame/: cg_ammocounter.cpp  cg_blur.cpp  cg_camerashake.cpp  cg_colltree.cpp  cg_compass.cpp  cg_draw_debug.cpp  cg_draw_indicators.cpp  cg_draw_net.cpp  cg_draw_reticles.cpp  cg_draw_splatter.cpp  cg_drawtools.cpp  cg_effects_load_db.hpp  cg_effects_load_obj.cpp  cg_event.cpp  cg_glass.cpp  cg_hudelem.cpp  cg_info.cpp  cg_laser.cpp  cg_localents.cpp  cg_mem_track.cpp  cg_modelpreviewer.cpp  cg_motiontracker.cpp  cg_playerstate.cpp  cg_pose_utils.cpp  cg_rearview.cpp  cg_rumble.cpp  cg_shellshock.cpp  cg_sound.cpp  cg_soundmixergui.cpp  cg_view.cpp  cg_visionsets.cpp  cg_weapons.cpp  cg_world.cpp  offhandweapons.cpp
src/OpenIW/cgame_mp/: cg_animtree_mp.cpp  cg_client_side_effects_mp.cpp  cg_compassfriendlies_mp.cpp  cg_consolecmds_mp.cpp  cg_draw_mp.cpp  cg_draw_net_mp.cpp  cg_ents_mp.cpp  cg_gamepad.cpp  cg_local_mp.hpp  cg_main_mp.cpp  cg_newdraw_mp.cpp  cg_players_mp.cpp  cg_pose_mp.cpp  cg_pose_mp.hpp  cg_predict_mp.cpp  cg_scoreboard_mp.cpp  cg_servercmds_mp.cpp  cg_snapshot_mp.cpp  cg_vehicles_mp.cpp  dedicated_cgame.cpp
src/OpenIW/client/: cl_cin.cpp  cl_console.cpp  cl_debug.cpp  cl_debugdata.cpp  cl_devgui.cpp  cl_gamepad.cpp  cl_keys.cpp  con_channels.cpp  gamerprofile.cpp  newsfeed.cpp  screen_placement.cpp  screen_placement.hpp  splitscreen.cpp
src/OpenIW/client_mp/: cl_cgame_mp.cpp  cl_input.cpp  cl_main_mp.cpp  cl_main_xenon_mp.cpp  cl_migration.cpp  cl_net_chan_mp.cpp  cl_parse_mp.cpp  cl_pose_mp.cpp  cl_rank.cpp  cl_scrn_mp.cpp  cl_ui_mp.cpp  cl_ui_xenon_mp.cpp  cl_voice.cpp  cl_voice.hpp  cl_voice_debug.cpp  client_mp.hpp  party.hpp  party_local.hpp  partyclient.cpp  partycommon.cpp  partyhost.cpp  partymigrate.cpp  partyui.cpp  voice.cpp  voicemute.cpp
src/OpenIW/database/: assetbuf.cpp  assetbuf.hpp  db_assetlist_load.hpp  db_assetnames.cpp  db_auth.cpp  db_fastfile_load.cpp  db_file_load.cpp  db_load.cpp  db_memory.cpp  db_primtypes_load.hpp  db_primtypes_load_buf.hpp  db_primtypes_save_buf.hpp  db_registry.cpp  db_stream.cpp  db_stream_load.cpp  db_streaming.cpp  db_streaming_choose.cpp  db_streaming_tabulate.cpp  db_streaming_tabulate.hpp  db_stringtable_load.cpp
src/OpenIW/devgui/: devgui.cpp  devgui_input.cpp  devgui_util.cpp
src/OpenIW/dynentity/: dynentity_client.cpp  dynentity_coll.cpp  dynentity_db.hpp  dynentity_load_db.hpp  dynentity_load_obj.cpp  dynentity_load_obj.hpp
src/OpenIW/effectscore/: fx_archive.cpp  fx_beam.cpp  fx_cloud.cpp  fx_debug3d.cpp  fx_draw.cpp  fx_draw.hpp  fx_dvars.cpp  fx_effect_load_db.hpp  fx_effect_types.hpp  fx_glass.cpp  fx_glass_archive.cpp  fx_glass_crack.cpp  fx_glass_crack.hpp  fx_glass_crack_shard.cpp  fx_glass_crack_types.hpp  fx_glass_dpvs.cpp  fx_glass_draw.cpp  fx_glass_inline.hpp  fx_glass_load_db.hpp  fx_glass_trace.cpp  fx_glass_update.cpp  fx_graph.cpp  fx_load_obj.cpp  fx_marks.cpp  fx_marks.hpp  fx_postlight.cpp  fx_profile.cpp  fx_random.cpp  fx_random.hpp  fx_sort.cpp  fx_sparkfountain.cpp  fx_sprite.cpp  fx_system.cpp  fx_system.hpp  fx_update.cpp  fx_update_util.cpp  fx_world.cpp  fx_world_load_db.hpp  fxcurve.cpp  fxcurve.hpp
src/OpenIW/game/: bullet.cpp  enthandle.cpp  g_bsp_load_db.hpp  g_client_fields.cpp  g_client_script_cmd.cpp  g_cmds.cpp  g_debug.cpp  g_glass.cpp  g_glass_load_db.hpp  g_hudelem.cpp  g_items.cpp  g_load_utils.cpp  g_mem_track.cpp  g_missile.cpp  g_mover.cpp  g_scr_main.cpp  g_scr_mover.cpp  g_stepslide.cpp  g_svcmds.cpp  g_trigger.cpp  g_weapon.cpp  linkto.cpp  pathnode_load_db.hpp  player_use.cpp  savedevice.cpp  savedevice_xenon.cpp  savefield.cpp  scr_const.cpp  turret.cpp
src/OpenIW/game_mp/: g_active_mp.cpp  g_client_mp.cpp  g_client_script_cmd_mp.cpp  g_cmds_mp.cpp  g_combat_mp.cpp  g_main_mp.cpp  g_misc_mp.cpp  g_player_corpse_mp.cpp  g_public_mp.hpp  g_save_mp.cpp  g_scr_main_mp.cpp  g_scr_objectives_mp.cpp  g_spawn_mp.cpp  g_team_mp.cpp  g_utils_mp.cpp  savememory_mp.cpp
src/OpenIW/gfx_d3d/: r_add_bsp.cpp  r_add_staticmodel.cpp  r_bsp.cpp  r_bsp_db.hpp  r_bsp_load_db.hpp  r_bsp_load_obj.cpp  r_bspsurfiter.cpp  r_bspsurfiter_inline.hpp  r_buffers.cpp  r_cinematic.cpp  r_cloudsurf.cpp  r_cloudsurfiter.cpp  r_cloudsurfiter_inline.hpp  r_cmdbuf.cpp  r_cmds.cpp  r_codesurf.cpp  r_codesurf_inline.hpp  r_codesurfiter.cpp  r_codesurfiter_inline.hpp  r_collision.cpp  r_debug.cpp  r_debug_alloc.cpp  r_devgui.cpp  r_dobj_skin.cpp  r_dpvs.cpp  r_dpvs.hpp  r_dpvs_dynmodel.cpp  r_dpvs_entity.cpp  r_dpvs_sceneent.cpp  r_dpvs_static.cpp  r_draw_bsp.cpp  r_draw_emissive.cpp  r_draw_lit.cpp  r_draw_material.cpp  r_draw_method.cpp  r_draw_shadowablelight.cpp  r_draw_staticmodel.cpp  r_draw_sunshadow.cpp  r_draw_xmodel.cpp  r_drawlist.hpp  (+111 more)
src/OpenIW/iwnet/: iwnet.cpp  iwnet_auth.cpp  (+9 more)
(+303 files in other folders)
